<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#252423"
    android:gravity="center"
    tools:context=".Authorization">

    <ImageView
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:src="@drawable/owl"
        />

    <android.support.v7.widget.CardView
        android:layout_width="312dp"
        android:layout_height="312dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="#4c4c4c"
                    android:lineSpacingExtra="16sp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="#4c4c4c"
                    android:lineSpacingExtra="16sp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="12sp"
                android:text="@string/registration"
                android:background="#263238"
                style="@style/Widget.AppCompat.Button.Colored"
                android:onClick="goToRegistration"
                />

            <Button
                android:id="@+id/enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="12sp"
                android:text="@string/enter"
                android:background="#263238"
                style="@style/Widget.AppCompat.Button.Colored"
                android:onClick="enter"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>